# Home_work_29

./: README.md  db.sqlite3  pyproject.toml  pytest.ini
Hw_django/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  models.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_alter_ad_author_alter_ad_category.py  0004_alter_ad_author_alter_ad_category.py
ads/models/: __init__.py  ad.py  ads.py  category.py  selection.py
ads/views/: __init__.py  ad.py  location.py  selection.py
datasets/: db.py
pg/: postgres_public_ads_ad.csv  postgres_public_ads_category.csv  postgres_public_ads_location.csv  postgres_public_auth_permission.csv  postgres_public_auth_user.csv  postgres_public_categories.csv  postgres_public_django_admin_log.csv  postgres_public_django_content_type.csv  postgres_public_django_migrations.csv  postgres_public_django_session.csv  postgres_public_users_user.csv
tests/: conftest.py  conftests.py  factories.py
tests/ads/: ad_create_test.py  selection_create_test.py  selection_test.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_location_user_location.py
