[tool.poetry]
name = "hw-django"
version = "0.1.0"
description = ""
authors = ["Anastasiia-Eliz <aselizarova@yandex.ru>"]
readme = "README.md"
packages = [{include = "hw_django"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
